k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose-resolved.yaml
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: client
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: client
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose-resolved.yaml
        kompose.version: 1.33.0 (HEAD)
      labels:
        io.kompose.network/cs436-project-default: "true"
        io.kompose.service: client
    spec:
      containers:
        - env:
            - name: CLIENT_PORT
              value: "80"
            - name: EXPRESS_PORT
              value: "8000"
            - name: MONGODB_PORT
              value: "27017"
            - name: SOCKET_IO_PORT
              value: "8001"
            - name: VITE_PUBLIC_SERVER_URL
              value: http://localhost:8000
          image: client
          imagePullPolicy: Never
          name: client
          ports:
            - containerPort: 80
              hostPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /app/public
              name: client-cm0
            - mountPath: /app/src
              name: client-cm1
      restartPolicy: Always
      volumes:
        - configMap:
            name: client-cm0
          name: client-cm0
        - configMap:
            name: client-cm1
          name: client-cm1
