k8s/express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose-resolved.yaml
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: express
  name: express
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: express
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose-resolved.yaml
        kompose.version: 1.33.0 (HEAD)
      labels:
        io.kompose.network/cs436-project-default: "true"
        io.kompose.service: express
    spec:
      containers:
        - env:
            - name: CLIENT_PORT
              value: "80"
            - name: EXPRESS_PORT
              value: "8000"
            - name: MONGODB_PORT
              value: "27017"
            - name: SECRET
              value: drakeisapedofile
            - name: SOCKET_IO_PORT
              value: "8001"
            - name: URL
              value: mongodb://mongo:27017
          image: express
          imagePullPolicy: Never
          name: express
          ports:
            - containerPort: 8000
              hostPort: 8000
              protocol: TCP
      restartPolicy: Always
