k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose-resolved.yaml
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose-resolved.yaml
        kompose.version: 1.33.0 (HEAD)
      labels:
        io.kompose.network/cs436-project-default: "true"
        io.kompose.service: mongo
    spec:
      containers:
        - image: arm64v8/mongo:latest
          name: mongo
          ports:
            - containerPort: 27017
              hostPort: 27017
              protocol: TCP
      restartPolicy: Always
