k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose-resolved.yaml
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx 
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose-resolved.yaml
        kompose.version: 1.33.0 (HEAD)
      labels:
        io.kompose.network/cs436-project-default: "true"
        io.kompose.service: nginx
    spec:
      containers:
        - env:
            - name: CLIENT_PORT
              value: "3000"
            - name: EXPRESS_PORT
              value: "8000"
            - name: MONGODB_PORT
              value: "27017"
            - name: SOCKET_IO_PORT
              value: "8001"
          image: "us-central1-docker.pkg.dev/pristine-clone-339910/client/cs436_project-nginx:latest"
          imagePullPolicy: "Always"
          name: nginx
          ports:
            - containerPort: 80
              hostPort: 80
              protocol: TCP
      restartPolicy: Always
