k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose-resolved.yaml
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: client
  name: client
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: client
